--- a/styles/footer.css
+++ b/styles/footer.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 12vh;
 
-    background: rgba(92, 184, 255);
+    background: rgb(0, 64, 113);
     border-top: 2px solid #111;
 }
 
