--- a/styles/header.css
+++ b/styles/header.css
@@ -14,7 +14,7 @@
     height: 12vh;
     padding: 8px;
 
-    background: rgba(92, 184, 255);
+    background: rgb(0, 64, 113);
     border-bottom: 2px solid #111;
 }
 
