--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 .main {
-    margin: 0 auto;
-    height: 76vh;
+    min-height: 100vh;
+    margin: 4.5rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
