--- a/styles/reset.css
+++ b/styles/reset.css
@@ -11,5 +11,11 @@ body {
 }
 
 body * {
-    color: #F5F5FF;
+    color: #181818;
+}
+
+.title {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #151515;
 }
