--- a/styles/categories.css
+++ b/styles/categories.css
@@ -56,6 +56,10 @@
     transition: all .3s linear;
 }
 
+.buttons button a {
+    text-decoration: none;
+}
+
 .buttons button:hover {
     transform: scale(1.02);
     letter-spacing: 2px;
