--- a/styles/categories.css
+++ b/styles/categories.css
@@ -1,9 +1,22 @@
-.categories {
+.subcategories {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 32px;
+}
+
+.categories_list {
+    display: flex;
+    flex-direction: column;
     gap: 16px;
+}
+
+.categories {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 128px;
 }
 
 .categories_button {
@@ -23,15 +36,8 @@
 }
 
 .categories_button:hover {
-    transform: scale(1.035);
+    transform: scaleY(1.02);
     letter-spacing: 1.5px;
-}
-
-.categories_list {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .categorie {
@@ -45,15 +51,19 @@
     font-weight: 500;
 }
 
+.buttons {
+    display: flex;
+    gap: 16px;
+}
+
 .buttons button {
-    font-size: 1.35rem;
+    font-size: 1.3rem;
     font-weight: 300;
     padding: 6px 12px;
     border: none;
     border-radius: 10px;
-    color: #151515;
     cursor: pointer;
-    transition: all .3s linear;
+    transition: all .3s ease-in;
 }
 
 .buttons button a {
@@ -61,6 +71,6 @@
 }
 
 .buttons button:hover {
-    transform: scale(1.02);
-    letter-spacing: 2px;
+    transform: scale(1.01);
+    letter-spacing: 1.2px;
 }
