--- a/styles/products.css
+++ b/styles/products.css
@@ -1,13 +1,25 @@
-.products {
+.products_page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 32px;
+}
+
+.products_list {
+    display: flex;
+    flex-direction: column;
     gap: 16px;
 }
 
-.products_title {
-    font-size: 2rem;
-    font-weight: 700;
-    color: #151515;
+.products {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 128px;
+}
+
+.product p {
+    font-size: 1.25rem;
+    font-weight: 500;
 }
