--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 .main {
     min-height: 100vh;
-    margin: 4.5rem 0;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
