--- a/styles/tables.css
+++ b/styles/tables.css
@@ -1,48 +1,22 @@
-.table,
-.table_body {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+.th {
+    font-size: 1.28rem;
 }
 
-.row {
-    width: 780px;
+.actions {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-.table_head .row .col {
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-
-.table_body .row {
-    padding-bottom: 10px;
-    border-bottom: 2.2px solid #787878;
-}
-
-.table_body .row .col {
-    font-size: 1.35rem;
-    font-weight: 500;
-}
-
-.table_body .row .col button {
-    font-size: 1.2rem;
-    font-weight: 300;
-    padding: 8px 14px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all .3s ease-in;
-}
-
-.table_body .row .col button:hover {
-    transform: scale(1.01);
-    letter-spacing: 1.2px;
-}
-
-.col.buttons {
+.actions.buttons {
     display: flex;
-    gap: 16px;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+}
+
+@media screen and (min-width: 860px) {
+    .actions {
+        padding-inline-start: 45% !important;
+    }
 }
